# celebrity-dogs

./: Cargo.toml  dogs.toml
src/: dog.rs  game.rs  main.rs  setup.rs
