[package]
name = "celebrity-dogs"
version = "0.1.0"
edition = "2021"

[dependencies]

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-std = "1.13.0"
thiserror = "1.0.64"
toml = "0.8.19"
strum = { version = "0.26.3", features = ["derive"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.rand]
version = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.iced]
version = "0.13.1"
features = ["image", "debug", "tokio"]

